[#187227450] fix hero component z-index ordering

--- a/src/components/blocks/hero/_hero.scss
+++ b/src/components/blocks/hero/_hero.scss
@@ -16,17 +16,18 @@
 
   &::before {
     content: "";
-    bottom: 0;
-    height: 100%;
-    left: 0;
-    position: absolute;
-    width: 100%;
     background: linear-gradient(
       0deg,
       rgba(0, 0, 0, 100%) 0%,
       rgba(10, 10, 11, 88%) 25%,
       rgba(36, 37, 39, 48%) 65%,
       rgba(62, 64, 67, 0%) 100%);
+    bottom: 0;
+    height: 100%;
+    left: 0;
+    position: absolute;
+    width: 100%;
+    z-index: 1;
   }
 
   &__image {
@@ -42,6 +43,7 @@
     padding-bottom: 20px;
     position: absolute;
     width: 100%;
+    z-index: 1;
 
     @include mixins.breakpoints-bpMinSmall {
       padding-bottom: 40px;
